flapivor/tests/m3/hopix/typechecker/good/42-pattern-matching-06.hopix
type Option<a> = None | Some (a)

val x : Int = case Some<Int>(42) { Some<Int>(_ : Int) | None<Int> => 0 }