flapivor/tests/m3/hopix/typechecker/bad/49-constructor-05.hopix
type T = A (Int)

val main : T = A<Int> (0)